display mocked movies list

--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div>
-  <h1>Movies</h1>
-  <movies-header></movies-header>
-  <movies-overview></movies-overview>
-  <movies-footer></movies-footer>
-</div>
+<movies-list></movies-list>
