--- a/src/main/webapp/src/styles.css
+++ b/src/main/webapp/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.html, body {
+  font-family: "AA Zuehlke", Helvetica, sans-serif;
+  font-size: 16px;
+  background-color: #fbfcfb;
+  margin: 0;
+  padding: 0;
+}
