--- a/src/main/webapp/src/app/movies-overview/movies-list.component.html
+++ b/src/main/webapp/src/app/movies-overview/movies-list.component.html
@@ -7,6 +7,7 @@
 </form>
 </div>
 
+<!-- TODO: show loading spinner while loading movies -->
 <div *ngIf="errorLoadingMovies" class="error">There was an error loading the movies!</div>
 
 <div *ngIf="displayedMovies" class="movies-list">
